--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BASE_URI=http://localhost
 WEB_PORT=2020
-MONGODB_URI=mongodb+srv://admin:admin@assessmentdb.9l1fxox.mongodb.net/Skills
+MONGODB_URI=mongodb+srv://admin:admin@assessmentdb.9l1fxox.mongodb.net/SkillsDev
+MONGODB__PRODUCTION_URI=mongodb+srv://admin:admin@assessmentdb.9l1fxox.mongodb.net/Skills
